# docs/swagger.yaml
@@ -30,6 +30,17 @@ definitions:
       created:
         type: boolean
     type: object
+  main.LoginResponsePayload:
+    properties:
+      access_token:
+        type: string
+      expires_in:
+        type: integer
+      refresh_token:
+        type: string
+      user_id:
+        type: integer
+    type: object
   main.LoginUserRequestPayload:
     properties:
       email:
@@ -195,6 +206,11 @@ definitions:
       video_url:
         type: string
     type: object
+  util.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -223,15 +239,17 @@ paths:
       - application/json
       responses:
         "200":
-          description: User token
+          description: Login response
           schema:
-            type: string
+            $ref: '#/definitions/main.LoginResponsePayload'
         "400":
           description: Bad Request
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal Server Error
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       summary: User login
       tags:
       - authentication
@@ -253,10 +271,12 @@ paths:
           description: No content
         "400":
           description: Bad Request
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal Server Error
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       summary: Logout user
       tags:
       - authentication
@@ -280,13 +300,16 @@ paths:
             $ref: '#/definitions/main.RefreshTokenResponsePayload'
         "400":
           description: Bad Request
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "401":
           description: Unauthorized
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal Server Error
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       summary: Refresh access token
       tags:
       - authentication
@@ -311,10 +334,12 @@ paths:
             $ref: '#/definitions/main.RegisterUserResponsePayload'
         "400":
           description: Bad Request
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal Server Error
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       summary: Registers a user
       tags:
       - authentication
@@ -338,10 +363,12 @@ paths:
             $ref: '#/definitions/main.ResendOTPResponsePayload'
         "400":
           description: Bad Request
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal Server Error
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       summary: Resend OTP
       tags:
       - authentication
@@ -366,10 +393,12 @@ paths:
             $ref: '#/definitions/main.VerifyUserResponsePayload'
         "400":
           description: Bad Request
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
         "500":
           description: Internal Server Error
-          schema: {}
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
       summary: User verification
       tags:
       - authentication
